# crab_nest

./: .env.example  .gitignore  Cargo.toml  README.md  crab_nest.db
migrations/: 001_init.sql  002_add_voice_messages.sql
src/: db.rs  handlers.rs  main.rs  templates.rs  websocket.rs
static/: .gitkeep
templates/: base.html  create.html  index.html  room.html
